descuento en los cursos/diplomados

--- a/api/course/models/course.settings.json
+++ b/api/course/models/course.settings.json
@@ -64,6 +64,16 @@
     "old": {
       "type": "boolean",
       "default": false
+    },
+    "culminate": {
+      "type": "boolean",
+      "default": false
+    },
+    "percentage_discount": {
+      "type": "string"
+    },
+    "discount_date": {
+      "type": "string"
     }
   }
 }
